Stop using deprecated MainPage

--- a/src/BolWallet/Pages/MenuPanel.razor
+++ b/src/BolWallet/Pages/MenuPanel.razor
@@ -29,14 +29,14 @@
             <MudNavGroup Title="Certifier">
                 @if (!BolAccount.IsCertifier)
                 {
-                    <MudNavLink Icon="@Icons.Material.Rounded.SupervisorAccount" OnClick="() => App.Current.MainPage.Navigation.PushAsync(new Views.RegisterAsCertifierPage())">Become a Certifier</MudNavLink>
+                    <MudNavLink Icon="@Icons.Material.Rounded.SupervisorAccount" OnClick="() => App.Current.Windows[0].Page.Navigation.PushAsync(new Views.RegisterAsCertifierPage())">Become a Certifier</MudNavLink>
                 }
                 else
                 {
                     <MudNavLink Icon="@Icons.Material.Rounded.PersonAdd" OnClick="() => NavigationService.NavigateTo<CertifyViewModel>(true)">Certify a CodeName</MudNavLink>
                     <MudNavLink Icon="@Icons.Material.Rounded.AddModerator" OnClick="() => NavigationService.NavigateTo<WhitelistViewModel>(true)">Whitelist a Main Address</MudNavLink>
-                    <MudNavLink Icon="@Icons.Material.Rounded.LockPerson" OnClick="() => App.Current.MainPage.Navigation.PushAsync(new Views.AddMultiCitizenship())">Submit a Multiple Citizenship</MudNavLink>
-                    <MudNavLink Icon="@Icons.Material.Rounded.AttachMoney" OnClick="() => App.Current.MainPage.Navigation.PushAsync(new Views.SetCertifierFeePage())">Set Your Fee</MudNavLink>
+                    <MudNavLink Icon="@Icons.Material.Rounded.LockPerson" OnClick="() => App.Current.Windows[0].Page.Navigation.PushAsync(new Views.AddMultiCitizenship())">Submit a Multiple Citizenship</MudNavLink>
+                    <MudNavLink Icon="@Icons.Material.Rounded.AttachMoney" OnClick="() => App.Current.Windows[0].Page.Navigation.PushAsync(new Views.SetCertifierFeePage())">Set Your Fee</MudNavLink>
                     <MudNavLink Icon="@Icons.Material.Rounded.RemoveModerator" OnClick="() => ShowUnregisterConfirmation()">Unregister as Certifier</MudNavLink>
                 }
             </MudNavGroup>
@@ -83,7 +83,7 @@
     {
         try
         {
-            bool confirmed = await App.Current.MainPage.DisplayAlert("Confirm", "Are you sure you want to unregister as a certifier?", "Yes", "No");
+            bool confirmed = await App.Current.Windows[0].Page.DisplayAlert("Confirm", "Are you sure you want to unregister as a certifier?", "Yes", "No");
             if (confirmed)
             {
                 await bolService.UnRegisterAsCertifier();
