--- a/src/BolWallet/Pages/CitizenshipPage.razor
+++ b/src/BolWallet/Pages/CitizenshipPage.razor
@@ -108,6 +108,6 @@
             return;
         }
 
-        await App.Current.MainPage.Navigation.PushAsync(new Views.EcryptedCitizenshipPage());
+        await Application.Current.Windows[0].Page.Navigation.PushAsync(new Views.EcryptedCitizenshipPage());
     }
 }
