Disable back button and back button press in main pages

--- a/src/BolWallet/Views/MainPage.xaml
+++ b/src/BolWallet/Views/MainPage.xaml
@@ -8,6 +8,7 @@
     xmlns:controls1="clr-namespace:BolWallet.Controls"
     BackgroundColor="{DynamicResource SecondaryColor}"
     Title="{Binding Title}"
+    NavigationPage.HasBackButton="False"
     x:Name="this">
     
     <ContentPage.Resources>
