Enhance certify page with ShortHash registration status

--- a/src/BolWallet/Pages/CertifyPage.razor
+++ b/src/BolWallet/Pages/CertifyPage.razor
@@ -123,6 +123,40 @@
             </MudCard>
         </MudItem>
     }
+    @if (ViewModel.IsMultiCitizenship)
+    {
+        <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
+            <MudCard Class="styled-card">
+                <MudCardHeader>
+                    <CardHeaderAvatar>
+                        <MudAvatar Color="Color.Error">
+                            <MudIcon Icon="@Icons.Material.Rounded.Block"/>
+                        </MudAvatar>
+                    </CardHeaderAvatar>
+                    <CardHeaderContent>
+                        <MudText Typo="Typo.h6">ShortHash is in MultiCitizenship List.</MudText>
+                    </CardHeaderContent>
+                </MudCardHeader>
+            </MudCard>
+        </MudItem>
+    }
+    @if (!ViewModel.IsMultiCitizenship && ViewModel.IsCheckProcessOver)
+    {
+         <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
+            <MudCard Class="styled-card">
+                <MudCardHeader>
+                    <CardHeaderAvatar>
+                        <MudAvatar Color="Color.Error">
+                            <MudIcon Icon="@Icons.Material.Rounded.ThumbUp"/>
+                        </MudAvatar>
+                    </CardHeaderAvatar>
+                    <CardHeaderContent>
+                        <MudText Typo="Typo.h6">ShortHash is not in MultiCitizenship List.</MudText>
+                    </CardHeaderContent>
+                </MudCardHeader>
+            </MudCard>
+        </MudItem>
+    }
     <MudItem hidden="@(!ViewModel.AlternativeAccounts.Any())" xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
         <MudCard>
             <MudCardActions>
