Fix thump up success color

--- a/src/BolWallet/Pages/CertifyPage.razor
+++ b/src/BolWallet/Pages/CertifyPage.razor
@@ -129,7 +129,7 @@
             <MudCard Class="styled-card">
                 <MudCardHeader>
                     <CardHeaderAvatar>
-                        <MudAvatar Color="Color.Error">
+                        <MudAvatar Color="Color.Success">
                             <MudIcon Icon="@Icons.Material.Rounded.ThumbUp"/>
                         </MudAvatar>
                     </CardHeaderAvatar>
