--- a/src/BolWallet/Pages/CertifyPage.razor
+++ b/src/BolWallet/Pages/CertifyPage.razor
@@ -6,7 +6,7 @@
 
 <MudGrid>
     <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
-        <EditForm Model="@ViewModel" OnValidSubmit="ViewModel.Lookup">
+       <EditForm Model="@ViewModel" OnValidSubmit="ViewModel.Lookup">
             <DataAnnotationsValidator />
             <MudCard Class="styled-card" hidden="@(ViewModel.AlternativeAccounts.Any())">
                 <MudCardContent>
@@ -15,7 +15,18 @@
                                   Class="mt-3"
                                   @bind-Value="ViewModel.CodeName"
                                   For="@(() => ViewModel.CodeName)"
-                                  InputType="InputType.Text"/>
+                                  InputType="InputType.Text" />
+
+                    <MudSelect T="int" Label="Number of Citizenship(s)" @bind-Value="ViewModel.CitizenshipCount" Class="mt-3">
+                        <MudSelectItem Value="1">1</MudSelectItem>
+                        <MudSelectItem Value="2">2</MudSelectItem>
+                        <MudSelectItem Value="3">3</MudSelectItem>
+                    </MudSelect>
+
+                    @if (ViewModel.CitizenshipCount > 1)
+                    {
+                       
+                    }
                 </MudCardContent>
                 <MudCardActions>
                     <MudProgressCircular hidden="@(!ViewModel.IsLoading)" Indeterminate="true" Size="Size.Small"/>
